# xvy

./: .gitignore  README.md  pyproject.toml
input/: data1.csv  majors.csv  minors.csv
xvy/: launcher.py  main.py  plotter.py
