[tool.poetry]
name = "xvy"
version = "0.1.0"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.scripts]
xvy = "xvy.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
rich = "^12.6.0"
typer = "^0.7.0"
black = "^22.12.0"
scikit-learn = "^1.2.0"
plotly = "^5.11.0"
pandas = "^1.5.2"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
